--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.17",
+    "firebase": "^9.21.0",
     "node-modules": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
